--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "@vueuse/core": "^13.6.0",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
     "vue": "^3.5.17",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1",
     "vuex": "^4.0.2"
   },
