--- a/server/.env.example
+++ b/server/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 
 # AI Service Configuration (for future Gemini API integration)
 GEMINI_API_KEY=your_gemini_api_key_here
-GEMINI_MODEL=gemini-pro
+GEMINI_MODEL=gemini-1.5-flash
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
