--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "axios": "^1.6.0",
+    "axios": "^1.11.0",
     "concurrently": "^9.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
